--- a/apache_ubuntu1804/playbook.yml
+++ b/apache_ubuntu1804/playbook.yml
@@ -2,7 +2,7 @@
 # DO Community Playbooks: Apache on Ubuntu 18.04
 ##################################################
 ---
-- hosts: all
+- hosts: 127.0.0.1
   become: true
   vars_files:
     - vars/default.yml
