--- a/apache_ubuntu1804/vars/default.yml
+++ b/apache_ubuntu1804/vars/default.yml
@@ -1,6 +1,6 @@
 ---
-app_user: "jenkins"
+app_user: "prolifics"
 http_host: "127.0.0.1"
-http_conf: "127.0.0.1.conf"
+http_conf: "10.11.12.243.conf"
 http_port: "83"
 disable_default: true
