--- a/apache_ubuntu1804/vars/default.yml
+++ b/apache_ubuntu1804/vars/default.yml
@@ -1,5 +1,5 @@
 ---
-app_user: "ubuuntu"
+app_user: "ubuntu"
 http_host: "ec2-52-15-194-156.us-east-2.compute.amazonaws.com"
 http_conf: " ec2-52-15-194-156.us-east-2.compute.amazonaws.com.conf"
 http_port: "81"
