--- a/apache_ubuntu1804/first_playbook.yml
+++ b/apache_ubuntu1804/first_playbook.yml
@@ -1,5 +1,12 @@
 ---
 
+- name: Example clone of a single branch
+  ansible.builtin.git:
+    repo: https://github.com/Rajsekhar355/ansible-demo.git
+    dest: /home/ubuntu
+    single_branch: yes
+    version: master
+    
 - name: Network Getting Started First Playbook
   connection: ansible.netcommon.network_cli
   gather_facts: false
