--- a/apache_ubuntu1804/playbook.yml
+++ b/apache_ubuntu1804/playbook.yml
@@ -32,11 +32,26 @@
         src: "files/apache.conf.j2"
         dest: "/etc/apache2/sites-available/{{ http_conf }}"
 
-    #- name: Enable new site
-      # shell: /usr/sbin/a2ensite {{ http_conf }}
-      # notify: Reload Apache
+    - - name: enabled mod_rewrite
+      apache2_module: name=rewrite state=present
+      notify:
+        - restart apache2
 
-    # - name: Disable default Apache site
+    - name: apache2 listen on port 8081
+      lineinfile: dest=/etc/apache2/ports.conf regexp="^Listen 80" line="Listen 8081" state=present
+      notify:
+        - restart apache2
+
+    - name: apache2 virtualhost on port 8081
+      lineinfile: dest=/etc/apache2/sites-available/000-default.conf regexp="^<VirtualHost \*:80>" line="<VirtualHost *:8081>" state=present
+      notify:
+        - restart apache2
+
+  handlers:
+    - name: restart apache2
+      service: name=apache2 state=restarted
+
+     #- name: Disable default Apache site
       # shell: /usr/sbin/a2dissite 000-default.conf
       # # when: disable_default
       # notify: Reload Apache
