--- a/apache_ubuntu1804/playbook.yml
+++ b/apache_ubuntu1804/playbook.yml
@@ -32,7 +32,7 @@
         src: "files/apache.conf.j2"
         dest: "/etc/apache2/sites-available/{{ http_conf }}"
 
-    - - name: enabled mod_rewrite
+    - name: enabled mod_rewrite
       apache2_module: name=rewrite state=present
       notify:
         - restart apache2
