--- a/apache_ubuntu1804/vars/default.yml
+++ b/apache_ubuntu1804/vars/default.yml
@@ -1,6 +1,6 @@
 ---
 app_user: "ubuntu"
-http_host: "server1.com"
+http_host: "server1"
 http_conf: "server1.conf"
 http_port: "81"
 disable_default: true
