--- a/apache_ubuntu1804/playbook.yml
+++ b/apache_ubuntu1804/playbook.yml
@@ -32,8 +32,8 @@
         src: "files/apache.conf.j2"
         dest: "/etc/apache2/sites-available/{{ http_conf }}"
         
-    - name: a2ensite {{ domain }}
-      command: a2ensite {{ domain }}
+    - name: a2ensite {{ http_conf }}
+      command: a2ensite {{ http_conf }}
       args:
         creates: /etc/apache2/sites-enabled/{{ http_conf }}.conf
 
@@ -42,7 +42,7 @@
       notify:
         - restart apache2
 
-    - name: apache2 listen on port 8081
+    - name: apache2 listen on port {{ http_port }}
       lineinfile: dest=/etc/apache2/ports.conf regexp="^Listen 80" line="Listen {{ http_port }}" state=present
       notify:
         - restart apache2
