--- a/apache_ubuntu1804/playbook.yml
+++ b/apache_ubuntu1804/playbook.yml
@@ -24,8 +24,8 @@
 
     - name: Copy index test page
       template:
-        src: "files/index.html.j2"
-        dest: "/var/www/{{ http_host }}/index.html"
+        src: "files/enfold"
+        dest: "/var/www/{{ http_host }}/"
 
     - name: Set up Apache virtualhost
       template:
