--- a/apache_ubuntu1804/playbook.yml
+++ b/apache_ubuntu1804/playbook.yml
@@ -24,7 +24,7 @@
 
     - name: Copy index test page
       template:
-        src: "files/enfold"
+        src: "files/enfold/"
         dest: "/var/www/{{ http_host }}/"
 
     - name: Set up Apache virtualhost
