--- a/apache_ubuntu1804/playbook.yml
+++ b/apache_ubuntu1804/playbook.yml
@@ -21,12 +21,13 @@
         state: directory
         owner: "{{ app_user }}"
         mode: '0755'
-     - name: Copy the temp directory recursively to destination directory
+        
+    - name: Copy the temp directory recursively to destination directory
        copy:
         src: "files/enfold/"
         dest: "/var/www/{{ http_host }}"
-        owner: "admin"
-        group: "admin"
+        owner: "{{ app_user }}"
+        group: "{{ app_user }}"
         force: "yes"
         mode: 0755
 
