--- a/apache_ubuntu1804/playbook.yml
+++ b/apache_ubuntu1804/playbook.yml
@@ -22,6 +22,34 @@
         owner: "{{ app_user }}"
         mode: '0755'
         
+     - name: Create document root1
+       file:
+        path: "/var/www/{{ http_host }}/css"
+        state: directory
+        owner: "{{ app_user }}"
+        mode: '0755'
+      
+      - name: Create document root2
+        file:
+        path: "/var/www/{{ http_host }}/js"
+        state: directory
+        owner: "{{ app_user }}"
+        mode: '0755'
+      
+      - name: Create document root3
+        file:
+        path: "/var/www/{{ http_host }}/css"
+        state: directory
+        owner: "{{ app_user }}"
+        mode: '0755'
+        
+      - name: Create document root4
+        file:
+        path: "/var/www/{{ http_host }}/images"
+        state: directory
+        owner: "{{ app_user }}"
+        mode: '0755'
+        
     - name: Copy the temp directory recursively to destination directory
       copy:
         src: "files/enfold/"
