--- a/apache_ubuntu1804/playbook.yml
+++ b/apache_ubuntu1804/playbook.yml
@@ -25,12 +25,12 @@
     - name: Copy index test page
       copy:
         src: "files/index.html.j2"
-        dest: "/var/www/{{ http_host }}"
+        dest: "/var/www/{{ http_host }}/index.html"
         
     - name: Set up Apache virtualhost
       template:
         src: "files/apache.conf.j2"
-        dest: "/etc/apache2/sites-available/{{ http_conf }}/index.html"
+        dest: "/etc/apache2/sites-available/{{ http_conf }}"
         
     - name: a2ensite {{ http_conf }}
       command: a2ensite {{ http_conf }}
