--- a/apache_ubuntu1804/playbook.yml
+++ b/apache_ubuntu1804/playbook.yml
@@ -20,7 +20,15 @@
         path: "/var/www/{{ http_host }}"
         state: directory
         owner: "{{ app_user }}"
+        mode: '0755'   
+
+    - name: Create document root
+      file:
+        path: "/var/www/{{ http_host }}/css"
+        state: directory
+        owner: "{{ app_user }}"
         mode: '0755'       
+
       
     - name: Copy index test page
       template:
