--- a/apache_ubuntu1804/playbook.yml
+++ b/apache_ubuntu1804/playbook.yml
@@ -31,7 +31,7 @@
 
       
     - name: Copy index test page
-      template:
+      synchronize:
         src: "files"
         dest: "/var/www/{{ http_host }}"
         
