--- a/apache_ubuntu1804/project.properties
+++ b/apache_ubuntu1804/project.properties
@@ -14,4 +14,4 @@ sonar.language=js
  
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
-sonar.testExecutionReportPaths=test-report.xml
+sonar.coverage.jacoco.xmlReportPaths=test-report.xml
