--- a/apache_ubuntu1804/project.properties
+++ b/apache_ubuntu1804/project.properties
@@ -1,5 +1,5 @@
 # required metadata
-sonar.projectKey=cqsonar
+sonar.projectKey=second
 sonar.projectName=Node application
 sonar.projectVersion=1.0.0
  
